# chord2key

./: Cargo.toml  README.md
configs/joycons/: joycon_blank.json  joycon_keyboard.json
configs/left_joycon/: blank.json  letters.json  mouse.json  shortcuts.json  symbols.json
configs/nintendo_pro_controller/: pro_blank.json  pro_keyboard.json
configs/right_joycon/: blank.json  letters.json  mouse.json  shortcuts.json  symbols.json
configs/tests/generate_blank/: generate_blank.json
configs/tests/multiple_to_one/: multiple_to_one.json
configs/tests/one_to_one/: one_to_one.json
src/: attribute_set.rs  constants.rs  events.rs  input.rs  lib.rs  mapping.rs  output.rs
src/input/: device.rs  events.rs
src/mapping/: actions.rs  configuration.rs  mapper.rs  maps.rs  thresholds.rs
src/mapping/maps/: chord_map.rs  modifier_map.rs  mouse_map.rs
src/output/: actions.rs  device.rs
tests/: evdev-io.rs  mapping.rs
tests/common/: mod.rs
