[package]
name = "chord2key"
version = "0.1.0"
authors = ["Nathan Scheinkman <nascheinkman@protonmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chord2key"
test = true
doc = true
path="src/lib.rs"

[dependencies]
evdev = {git="https://github.com/emberian/evdev"}
strum = "0.11.0"
strum_macros = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitvec = { version = "0.21", features = ["serde"] }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
