[package]
name = "chord2key"
version = "0.1.1"
authors = ["Nathan Scheinkman <nascheinkman@protonmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Chorded gamepad input on linux"
homepage = "https://github.com/nascheinkman/chord2key"
documentation = "https://github.com/nascheinkman/chord2key"
repository = "https://github.com/nascheinkman/chord2key"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chord2key"
test = true
doc = true
path="src/lib.rs"

[dependencies]
evdev = "0.11.0"
strum = "0.11.0"
strum_macros = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitvec = { version = "0.21", features = ["serde"] }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
